# pm_assistant

./: README.md
pm_assistant/: .gitignore  README.md  pyproject.toml  requirements.txt
pm_assistant/knowledge/: kapsul_user_feedback.md  product_context.md
pm_assistant/src/pm_assistant/: crew.py  main.py
pm_assistant/src/pm_assistant/config/: agents.yaml  tasks.yaml
pm_assistant/src/pm_assistant/tools/: serper_search_tool.py  test_serper_tool.py
