[project]
name = "pm_assistant"
version = "0.1.0"
description = "pm_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
pm_assistant = "pm_assistant.main:run"
run_crew = "pm_assistant.main:run"
train = "pm_assistant.main:train"
replay = "pm_assistant.main:replay"
test = "pm_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
